dd pretty print for date and tables

--- a/UIService/src/main/resources/templates/callSchedule/call-schedule.html
+++ b/UIService/src/main/resources/templates/callSchedule/call-schedule.html
@@ -11,7 +11,7 @@
 <section layout:fragment="content">
     <h1>Расписание звонков</h1>
 
-    <table>
+    <table class="table table-stripped">
         <thead>
         <tr>
             <th>Номер урока</th>
