--- a/UIService/src/main/resources/templates/marks/for-student.html
+++ b/UIService/src/main/resources/templates/marks/for-student.html
@@ -10,7 +10,7 @@
 <section layout:fragment="content">
     <h1 th:text="'Оценки ученика ' + ${student.fullName()}"></h1>
 
-    <table>
+    <table class="table table-stripped">
         <thead>
         <tr>
             <th>Предмет</th>
