--- a/UIService/src/main/resources/templates/meetings/update.html
+++ b/UIService/src/main/resources/templates/meetings/update.html
@@ -23,27 +23,31 @@
     <form method="post"
           th:action="@{/meeting-schedule/update/{classId}/{id}(classId=${classId},id=${meeting.getMeetingId()})}"
           th:object="${payload}">
-        <label>
-            Дата:<br>
-            <input type="datetime-local" name="dateTime"
-                   th:value="${#dates.format(payload.dateTime, 'yyyy-MM-dd HH:mm')}">
-        </label><br>
-        <label>
-            Аудитория:<br>
-            <select name="classroomId" data-th-value="${payload != null ? payload.classroomId : meeting.classroomId}">
+        <div class="form-group">
+            <label for="inputDate">Дата:</label>
+            <input id="inputDate" type="datetime-local" class="form-control" name="dateTime"
+                   th:value="${#temporals.format(payload.dateTime, 'yyyy-MM-dd HH:mm')}">
+        </div>
+
+        <div class="form-group">
+            <label for="exampleFormControlSelect1">Аудитория</label>
+            <select class="form-control" id="exampleFormControlSelect1"
+                    name="classroomId" data-th-value="${payload != null ? payload.classroomId : meeting.classroomId}">
                 <option th:each="classroom : ${classrooms}"
                         th:value="${classroom.id()}"
                         th:text="${classroom.name()}">
                 </option>
             </select>
-        </label><br>
-        <label>
-            Описание:<br>
-            <textarea name="description"
-                      data-th-text="${payload != null ? payload.description : meeting.description}"></textarea>
-        </label><br>
+        </div>
 
-        <button type="submit">Обновить</button>
+        <div class="form-group">
+            <label for="exampleFormControlTextarea1">Описание</label>
+            <textarea class="form-control" id="exampleFormControlTextarea1" rows="1"
+                      name="description"
+                      data-th-text="${payload != null ? payload.description : meeting.description}"></textarea>
+        </div>
+
+        <button type="submit" class="btn btn-outline-primary">Обновить</button>
     </form>
 </section>
 </body>
