Add styles for error class

--- a/UIService/src/main/resources/static/css/styles.css
+++ b/UIService/src/main/resources/static/css/styles.css
@@ -30,3 +30,7 @@ ul.hr li {
     border: 1px solid #000; /* Рамка вокруг текста */
     padding: 3px; /* Поля вокруг текста */
 }
+
+.error {
+    color: #e14141;
+}
