--- a/UIService/src/main/resources/templates/fragments/layuots/base-layout.html
+++ b/UIService/src/main/resources/templates/fragments/layuots/base-layout.html
@@ -20,18 +20,15 @@
 
 <div class="container">
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">Navbar</a>
+        <a class="navbar-brand" href="/">EDiary</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
-                <li class="nav-item active">
-                    <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
-                </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/features">Features</a>
+                    <a class="nav-link" href="/call-schedule">Расписание звонков</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/pricing">Pricing</a>
