Change exception handling

--- a/UIService/src/main/resources/templates/errors/base-error.html
+++ b/UIService/src/main/resources/templates/errors/base-error.html
@@ -9,7 +9,7 @@
 <body>
 
 <section layout:fragment="content">
-    <h1 th:text="${message}"></h1>
+    <h1 th:text="${'Ошибка ' + code + ' - ' + message}"></h1>
 </section>
 </body>
 </html>
