--- a/UIService/src/main/resources/templates/meetings/update.html
+++ b/UIService/src/main/resources/templates/meetings/update.html
@@ -42,7 +42,7 @@
 
         <div data-th-if="${errors}">
             <ul>
-                <li class="error" data-th-each="error: ${errors}" data-th-text="${error}"></li>
+                <li class="form-error" data-th-each="error: ${errors}" data-th-text="${error}"></li>
             </ul>
         </div>
 
