--- a/UIService/src/main/resources/templates/fragments/layuots/base-layout.html
+++ b/UIService/src/main/resources/templates/fragments/layuots/base-layout.html
@@ -1,7 +1,8 @@
 <!doctype html>
 <html lang="en"
       xmlns:th="http://www.thymeleaf.org"
-      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
@@ -25,16 +26,20 @@
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-                <li class="nav-item">
+        <div class="collapse navbar-collapse" id="navbarText">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item active" sec:authorize="isAuthenticated()">
                     <a class="nav-link" href="/call-schedule">Расписание звонков</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/pricing">Pricing</a>
+                <li class="nav-item active" th:if="${#authentication == null}">
+                    <a class="nav-link" href="/login">Войти</a>
+                </li>
+                <li class="nav-item active" sec:authorize="isAuthenticated()">
+                    <a class="nav-link" href="/logout">Выйти</a>
                 </li>
 
             </ul>
+            <span class="navbar-text" sec:authorize="isAuthenticated()" th:text="${#authentication.getName()}"></span>
         </div>
     </nav>
 
