Add getting userfeed

--- a/UIService/src/main/resources/templates/home/home-page.html
+++ b/UIService/src/main/resources/templates/home/home-page.html
@@ -11,6 +11,9 @@
     <h1>Home page</h1>
 
     <p>This is home page</p>
+
+
+    <div th:if="${userfeed != null}" th:text="${userfeed.toString()}"></div>
 </section>
 </body>
 </html>
